# libsophon

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  install_build_dependencies.sh  libsophon_install.sh  license.rst  readme.rst  release.rst  release_en.rst  temp_install.sh  toolchain-aarch64-linux-1131.cmake  toolchain-aarch64-linux-930.cmake  toolchain-aarch64-linux.cmake  toolchain-arm-linux.cmake  toolchain-loongarch64-linux.cmake  windows.cmake
bm-smi/: CMakeLists.txt  windows.cmake
bm-smi/include/: bm-smi.hpp  bm_smi_cmdline.hpp  bm_smi_core_util.hpp  bm_smi_creator.hpp  bm_smi_display.hpp  bm_smi_display_memory_detail.hpp  bm_smi_display_util_detail.hpp  bm_smi_ecc.hpp  bm_smi_led.hpp  bm_smi_recovery.hpp  bm_smi_test.hpp  version.h
bm-smi/src/: bm-smi.cpp  bm_smi_cmdline.cpp  bm_smi_core_util.cpp  bm_smi_creator.cpp  bm_smi_display.cpp  bm_smi_display_memory_detail.cpp  bm_smi_display_util_detail.cpp  bm_smi_ecc.cpp  bm_smi_led.cpp  bm_smi_recovery.cpp  bm_smi_test.cpp
bmlib/: CMakeLists.txt  update_bmlib_version.sh  windows.cmake
bmlib/debian-dev/: libsophon-config.cmake  postinst  prerm
bmlib/debian-lib/: libsophon-bin-path.sh  libsophon.conf
bmlib/include/: api.h  bmlib_runtime.h  bmlib_type.h
bmlib/src/: a53lite_api.cpp  api.h  bmcpu_app.cpp  bmcpu_app.h  bmcpu_internal.h  bmcpu_runtime.cpp  bmkernel_runtime.cpp  bmlib_device.cpp  bmlib_device.h  bmlib_interface.h  bmlib_internal.h  bmlib_log.cpp  bmlib_md5.cpp  bmlib_md5.h  bmlib_memory.cpp  bmlib_memory.h  bmlib_mmpool.cpp  bmlib_mmpool.h  bmlib_profile.cpp  bmlib_profile.h  bmlib_runtime.cpp  bmlib_type.cpp  bmlib_type.h  bmlib_util.cpp  bmlib_version.h  ion.h  rbtree.c  rbtree.h  sgcpu_mix_device.cpp  sgcpu_mix_device.h  sgcpu_mix_host.h
bmlib/src/linux/: bmlib_ioctl.cpp  bmlib_ioctl.h
bmlib/src/window/: bmlib_ioctl.cpp  bmlib_ioctl.h
bmlib/tools/: CMakeLists.txt  bm_firmware_update.cpp  device_mem_mutex.cpp  device_mem_seg.cpp  pcie_load.cpp  read_device_mem.cpp  sc5_burning_tool.cpp  test_2d_cdma_perf.cpp  test_bmcpu_app.cpp  test_cdma_board.cpp  test_cdma_p2p.cpp  test_cdma_perf.cpp  test_cdma_perf_smmu.cpp  test_cdma_perf_u64.cpp  test_cdma_sg.cpp  test_compare_bandwidth.cpp  test_d2d_handle.cpp  test_gdma_perf.cpp  test_get_core_to_send.cpp  test_ion.cpp  test_launch_func.cpp  test_malloc_paddr.cpp  test_malloc_time.cpp  test_max_alloc_num.cpp  test_memcpy_d2d.cpp  test_reg.cpp  test_reset.cpp  test_rw_host.cpp  test_rw_mix.cpp  test_update_fw.cpp  update_boot_info.cpp  update_isl68127.cpp  version.cpp  windows.cmake
bmlib/windows-dev/: libsophon-config.cmake
bmvid/: .gitmodules  CMakeLists.txt  README.md  update_bmvid_version.sh
bmvid/bmcv/: CMakeLists.txt  Makefile  Makefile_common.mk
bmvid/bmcv/doc/: Makefile  (+3 more)
bmvid/cmake/: FindBMVidTarget.cmake  FindSETUPAPILIB_LIBRARY.cmake  bmvid_x86_pcie_device.cmake  config_common.cmake
bmvid/example/: bm_test.c  bmvpuenc.c  bmvpuenc.h  queue.c  util.c  util.h  vpu_info.c  vpu_reset.c
bmvid/tools/: 3pixl4byte_convert.c  bm1686_palladium_mem_tool.c  float_diff.c  fw_diff.c  load.tcl  m2ts_to_ts.c  nv12toyuv420.c  palladium_mem_tool.c  palladium_mem_tool_usage.txt  readfw.c  readhex.c  writehex.c  yuv_crop.c  yuv_md5.sh
driver/: CMakeLists.txt  Makefile  bm1684_ddr.bin_v3.1.2-3dfbe057-221128  bm1684_tcm.bin_v3.1.2-3dfbe057-221128  bm1684x.bin_v3.1.3-aea73efe-221222  bm_api.c  bm_api.h  bm_attr.c  bm_attr.h  bm_bgm.c  bm_bgm.h  bm_boot_info.c  bm_card.c  bm_card.h  bm_cdma.c  bm_cdma.h  bm_common.c  bm_common.h  bm_ctl.c  bm_ctl.h  bm_debug.c  bm_debug.h  bm_drv.c  bm_drv.h  bm_fops.c  bm_fw.c  bm_fw.h  bm_genalloc.c  bm_gmem.c  bm_gmem.h  bm_io.c  bm_io.h  bm_irq.c  bm_irq.h  bm_memcpy.c  bm_memcpy.h  bm_monitor.c  bm_monitor.h  bm_msg.h  bm_msgfifo.c  (+35 more)
driver/SGTPUV8/: SGTPUV8_card.c  SGTPUV8_card.h  SGTPUV8_ce.c  SGTPUV8_ce.h  SGTPUV8_clkrst.c  SGTPUV8_clkrst.h  SGTPUV8_ddr.c  SGTPUV8_ddr.h  SGTPUV8_gmem.c  SGTPUV8_gmem.h  SGTPUV8_irq.c  SGTPUV8_irq.h  SGTPUV8_lpddr4.c  SGTPUV8_lpddr4.h  SGTPUV8_perf.c  SGTPUV8_perf.h  SGTPUV8_reg.h  SGTPUV8_timer.c  SGTPUV8_timer.h  temp_def.h
driver/bm1682/: bm1682_card.c  bm1682_ddr.c  bm1682_gmem.c  bm1682_irq.c  bm1682_msgfifo.c  bm1682_pcie.c  bm1682_pcie.h  bm1682_smmu.c
driver/bm1684/: bm1684_base64.c  bm1684_card.c  bm1684_card.h  bm1684_cdma.c  bm1684_ce.c  bm1684_clkrst.c  bm1684_clkrst.h  bm1684_ddr.c  bm1684_ddr.h  bm1684_firmware_ddr.h  bm1684_firmware_tcm.h  bm1684_flash.c  bm1684_gmem.c  bm1684_irq.c  bm1684_irq.h  bm1684_jpu.c  bm1684_jpu.h  bm1684_lpddr4.c  bm1684_lpddr4.h  bm1684_pcie.c  bm1684_pcie.h  bm1684_perf.c  bm1684_pld_ddr.c  bm1684_reg.h  bm1684_smbus.c  bm1684_smmu.c
driver/bm1688/: bm1688_base64.c  bm1688_base64.h  bm1688_card.c  bm1688_card.h  bm1688_cdma.c  bm1688_cdma.h  bm1688_ce.c  bm1688_clkrst.c  bm1688_clkrst.h  bm1688_ddr.c  bm1688_ddr.h  bm1688_firmware_ddr.h  bm1688_firmware_tcm.h  bm1688_flash.c  bm1688_flash.h  bm1688_gmem.c  bm1688_gmem.h  bm1688_irq.c  bm1688_irq.h  bm1688_jpu.c  bm1688_jpu.h  bm1688_lpddr4.c  bm1688_lpddr4.h  bm1688_msgfifo.c  bm1688_msgfifo.h  bm1688_pcie.c  bm1688_pcie.h  bm1688_perf.c  bm1688_perf.h  bm1688_pld_ddr.c  bm1688_reg.h  bm1688_smbus.c  bm1688_smbus.h  bm1688_smmu.c  bm1688_smmu.h  bm1688_timer.c  bm1688_timer.h  bm1688_vcodec.c
driver/vpp/: bm1684_vpp.c  bm1684_vpp.h  bm1686_vpp.c  bm1686_vpp.h  bm1688_vpp.c  bm1688_vpp.h  vpp_platform.c  vpp_platform.h
driver/vpu/: vmm.h  vpu.c  vpu.h  vpuconfig.h
tpu-bmodel/: .gitignore  CMakeLists.txt  Makefile  Makefile.def  README.md  gen_model_header.sh  windows.cmake
tpu-bmodel/cmake/: utils.cmake
tpu-bmodel/include/: bmodel.hpp  model_generated.h
tpu-bmodel/model/: flatc  model.fbs
tpu-bmodel/src/: bmodel.cpp
tpu-bmodel/tools/: demo.cpp  model_combine.cpp  model_fbs.h  model_interface.h  model_tool.cpp  tpu_model.cpp  tpu_model.h
tpu-cpuop/tests/: CMakeLists.txt  boxnms_test.cpp  boxnms_test.py  mixcpu_tpu.prototxt  pnet_deploy.prototxt  pnet_deploy_no_log.prototxt  roialign_test.cpp  roialign_test.py  test_cpu_random_uniform.cpp  test_grid_sampler.cpp
(+2587 files in other folders)
